update study reservation implementation
