# service/src/routes/rooms.js
@@ -18,10 +18,57 @@
  */
 
 const express = require('express');
+
+const {
+  validateRoomId,
+  validateListRoomsQuery
+} = require('../schemas/rooms');
+
+const {
+  findAllRooms,
+  findRoomById
+} = require('../store/rooms');
+
+const {
+  toRoomRepresentation
+} = require('../representations/rooms');
+
 const router = express.Router();
 
-// TODO (Person 2): Wire up route handlers
-// router.get('/', async (req, res, next) => { ... });
-// router.get('/:roomId', async (req, res, next) => { ... });
+// GET /v1/rooms
+router.get('/', (req, res, next) => {
+  try {
+    validateListRoomsQuery(req.query);
+
+    const rooms = findAllRooms();
+
+    res.status(200).json(
+      rooms.map(toRoomRepresentation)
+    );
+  } catch (err) {
+    next(err);
+  }
+});
+
+// GET /v1/rooms/:roomId
+router.get('/:roomId', (req, res, next) => {
+  try {
+    const roomId = validateRoomId(req.params.roomId);
+
+    const room = findRoomById(roomId);
+
+    if (!room) {
+      const error = new Error('Room not found');
+      error.status = 404;
+      throw error;
+    }
+
+    res.status(200).json(
+      toRoomRepresentation(room)
+    );
+  } catch (err) {
+    next(err);
+  }
+});
 
 module.exports = router;
